[tool.poetry]
name = "lazyfast"
version = "0.1.29"
description = "LazyFast = FastAPI + HTMX + Component-based approach + State management"
authors = ["Nikita Irgashev <nik.irg@yandex.ru>"]
readme = "README.md"
homepage = "https://github.com/nikirg/lazyfast"
repository = "https://github.com/nikirg/lazyfast"
documentation = "https://github.com/nikirg/lazyfast/blob/main/DOCS.md"
exclude = ["examples", "site", "img", "dist"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
python-multipart = "^0.0.12"
asgiref = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
