[project]
name = "lazyfast"
version = "2.0.0"
description = "LazyFast = FastAPI + HTMX + Component-based approach + State management"
authors = [{ name = "Nikita Irgashev", email = "nik.irg@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
]
